--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 {% include base_path %}
-
+<head>
 <meta charset="utf-8">
 
 {% include seo.html %}
@@ -19,3 +19,4 @@
 <link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
 
 <meta http-equiv="cleartype" content="on">
+</head>
